syntax = "proto3";

package sonrio.common.v1;

option go_package = "github.com/sonr-io/sonr/thirdparty/types/common";

message IpnsEntry {
  enum ValidityType {
    // setting an EOL says "this record is valid until..."
    EOL = 0;
  }
  bytes value = 1;
  bytes signature = 2;

  ValidityType validityType = 3;
  bytes validity = 4;

  uint64 sequence = 5;

  uint64 ttl = 6;

  bytes pubKey = 7;
}
