syntax = "proto3";

package service.v1;

option go_package = "github.com/didao-org/sonr/x/service/types";

import "cosmos/msg/v1/msg.proto";
import "gogoproto/gogo.proto";
import "amino/amino.proto";
import "service/v1/genesis.proto";
import "cosmos_proto/cosmos.proto";

// Msg defines the module Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // CreateRecord creates a new record
  rpc CreateRecord(MsgCreateRecord) returns (MsgCreateRecordResponse);

  // UpdateRecord updates a record
  rpc UpdateRecord(MsgUpdateRecord) returns (MsgUpdateRecordResponse);

  // DeleteRecord deletes a record
  rpc DeleteRecord(MsgDeleteRecord) returns (MsgDeleteRecordResponse);
}


// MsgCreateRecord is the Msg/CreateRecord request type.
message MsgCreateRecord {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "sonrhq/service/MsgCreateRecord";

  // owner is the address of the owner of the record
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // name is the name of the record
  string name = 2;

  // description is the description of the record
  string description = 3;

  // origin is the origin of the record
  string origin = 4;

  // permissions in int32 format
  int32 permissions = 5;
}

// MsgCreateRecordResponse defines the Msg/CreateRecord response type.
message MsgCreateRecordResponse {}

// MsgUpdateRecord is the Msg/UpdateRecord request type.
message MsgUpdateRecord {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "sonrhq/service/MsgUpdateRecord";

  // owner is the address of the owner of the record
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // record_id is the id of the record to update
  uint64 record_id = 2;

  // name is the name of the record
  string name = 3;

  // description is the description of the record
  string description = 4;

  // origin is the origin of the record
  string origin = 5;

  // permissions in int32 format
  int32 permissions = 6;
}

// MsgUpdateRecordResponse defines the Msg/UpdateRecord response type.
message MsgUpdateRecordResponse {}

// MsgDeleteRecord is the Msg/DeleteRecord request type.
message MsgDeleteRecord {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "sonrhq/service/MsgDeleteRecord";

  // owner is the address of the owner of the record
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // origin is the id of the record to delete
  string origin = 2;
}

// MsgDeleteRecordResponse defines the Msg/DeleteRecord response type.
message MsgDeleteRecordResponse {}
